// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PickableList /> should render correctly 1`] = `
Array [
  <div
    class="styles__Container-sc-19fy1kf-0 kLoACa"
  >
    <div
      class="styles__Container-sc-1ig07ym-0 bXPQuC pickableList-header"
    >
      <input
        class="all-rows-checkbox"
        id="allRows"
        type="checkbox"
      />
      <p>
        Items
      </p>
    </div>
    <div
      class="styles__Container-sc-1u6boa9-0 dXlWzY"
    >
      <div
        class="styles__Container-sc-15na44m-0 iTaMBY pickableList-row"
      >
        <input
          type="checkbox"
        />
        <div
          class="styles__ChildWrapper-sc-15na44m-1 kzqZYR pickableList-row-content"
        >
          <p>
            Je suis un bel item #1
          </p>
        </div>
      </div>
      <div
        class="styles__Container-sc-15na44m-0 iTaMBY pickableList-row"
      >
        <input
          type="checkbox"
        />
        <div
          class="styles__ChildWrapper-sc-15na44m-1 kzqZYR pickableList-row-content"
        >
          <p>
            Je suis un bel item #2
          </p>
        </div>
      </div>
      <div
        class="styles__Container-sc-15na44m-0 iTaMBY pickableList-row"
      >
        <input
          type="checkbox"
        />
        <div
          class="styles__ChildWrapper-sc-15na44m-1 kzqZYR pickableList-row-content"
        >
          <p>
            Je suis un bel item #3
          </p>
        </div>
      </div>
      <div
        class="styles__Container-sc-15na44m-0 iTaMBY pickableList-row"
      >
        <input
          type="checkbox"
        />
        <div
          class="styles__ChildWrapper-sc-15na44m-1 kzqZYR pickableList-row-content"
        >
          <p>
            Je suis un bel item #4
          </p>
        </div>
      </div>
      <div
        class="styles__Container-sc-15na44m-0 iTaMBY pickableList-row"
      >
        <input
          type="checkbox"
        />
        <div
          class="styles__ChildWrapper-sc-15na44m-1 kzqZYR pickableList-row-content"
        >
          <p>
            Je suis un bel item #5
          </p>
        </div>
      </div>
    </div>
  </div>,
  ");",
]
`;

exports[`<PickableList /> should render correctly without header 1`] = `
<div
  class="styles__Container-sc-19fy1kf-0 kLoACa"
>
  <div
    class="styles__Container-sc-1u6boa9-0 dXlWzY"
  >
    <div
      class="styles__Container-sc-15na44m-0 iTaMBY pickableList-row"
    >
      <input
        type="checkbox"
      />
      <div
        class="styles__ChildWrapper-sc-15na44m-1 kzqZYR pickableList-row-content"
      >
        <p>
          Je suis un bel item #1
        </p>
      </div>
    </div>
    <div
      class="styles__Container-sc-15na44m-0 iTaMBY pickableList-row"
    >
      <input
        type="checkbox"
      />
      <div
        class="styles__ChildWrapper-sc-15na44m-1 kzqZYR pickableList-row-content"
      >
        <p>
          Je suis un bel item #2
        </p>
      </div>
    </div>
    <div
      class="styles__Container-sc-15na44m-0 iTaMBY pickableList-row"
    >
      <input
        type="checkbox"
      />
      <div
        class="styles__ChildWrapper-sc-15na44m-1 kzqZYR pickableList-row-content"
      >
        <p>
          Je suis un bel item #3
        </p>
      </div>
    </div>
    <div
      class="styles__Container-sc-15na44m-0 iTaMBY pickableList-row"
    >
      <input
        type="checkbox"
      />
      <div
        class="styles__ChildWrapper-sc-15na44m-1 kzqZYR pickableList-row-content"
      >
        <p>
          Je suis un bel item #4
        </p>
      </div>
    </div>
    <div
      class="styles__Container-sc-15na44m-0 iTaMBY pickableList-row"
    >
      <input
        type="checkbox"
      />
      <div
        class="styles__ChildWrapper-sc-15na44m-1 kzqZYR pickableList-row-content"
      >
        <p>
          Je suis un bel item #5
        </p>
      </div>
    </div>
  </div>
</div>
`;
